End Add navigation

--- a/src/app/components/hero-detail/hero-detail.component.html
+++ b/src/app/components/hero-detail/hero-detail.component.html
@@ -8,3 +8,5 @@
     <input [(ngModel)]="hero.name" id="hero-name" placeholder="name" type="text">
   </div>
 </div>
+
+<button (click)="goBack()" type="button">go back</button>
