--- a/src/app/components/hero-detail/hero-detail.component.html
+++ b/src/app/components/hero-detail/hero-detail.component.html
@@ -9,4 +9,6 @@
   </div>
 </div>
 
-<button (click)="goBack()" type="button">go back</button>
+<button (click)="save()" type="button">Save</button>
+
+<button (click)="goBack()" type="button">Go back</button>
