--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -14,6 +14,10 @@
     <a routerLink="/detail/{{hero.id}}">
       <span class="badge">{{hero.id}}</span> {{hero.name}}
     </a>
+
+    <button (click)="delete(hero)" class="delete" title="delete hero"
+            type="button">x
+    </button>
   </li>
 </ul>
 
