--- a/src/app/components/hero-detail/hero-detail.component.html
+++ b/src/app/components/hero-detail/hero-detail.component.html
@@ -5,7 +5,7 @@
 
   <div>
     <label for="hero-name">Hero name:</label>
-    <input [(ngModel)]="hero.name" id="hero-name" placeholder="name" type="text">
+    <input [(ngModel)]="hero.name" id="hero-name" placeholder="Hero name">
   </div>
 </div>
 
